<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">


    <EditText
        android:id="@+id/edittext"
        android:layout_width="248dp"
        android:layout_height="42dp"
        android:layout_marginTop="152dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/enter_number"

        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"

        android:ems="10"
        android:gravity="center"
        android:hint="@string/answer_here"
        android:textColorHint="@color/white"
        android:textColor="@color/white"

        android:inputType="number"
        android:text="@string/_0"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,TextViewEdits" />

    <EditText
        android:id="@+id/edittext2"
        android:layout_width="255dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:hint="@string/enter"
        android:textColorHint="@color/white"
        android:inputType="number"
        android:textSize="20sp"
        android:textStyle="normal"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="390dp"
        android:layout_height="104dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_divide"
            style="@style/Widget.Design.FloatingActionButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="12dp"
            android:layout_marginStart="16dp"
            android:text="@string/divide"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:cornerRadius="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_multiply"
            style="@style/Widget.Design.FloatingActionButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="12dp"
            android:text="@string/multiply"

            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:cornerRadius="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_divide"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_minus"
            style="@style/Widget.Design.FloatingActionButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="12dp"
            android:layout_marginStart="48dp"
            android:text="@string/minus"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:cornerRadius="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_plus"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_plus"
            style="@style/Widget.Design.FloatingActionButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="12dp"
            android:layout_marginStart="36dp"
            android:text="@string/plus"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:cornerRadius="36dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>